# smart-review

./: .flake8  .isort.cfg  .isort.cfg   .pre-commit-config.yaml  .python-version  README.md  bandit.yaml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json
src/smart_review/: app.py  exceptions.py
src/smart_review/ai/: base.py  objects.py  openai.py
src/smart_review/control/: controller.py
src/smart_review/gitops/: github.py
tests/gitops/: test_github.py
